helmfiles/tekton-pipelines/charts/tekton-pipelines/template/ttingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: ingress-tdashboard
  namespace: tekton-pipelines
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: tekton-pipelines-controller
            port:
              number: 9097
        path: /
        pathType: Prefix
